--- a/app/tournament_registration.html
+++ b/app/tournament_registration.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Torunament Registration</title>
+    <title>Tournament Registration</title>
   </head>
   <body>
     <h1>Hello, world!</h1>
@@ -29,20 +29,20 @@
       <!----end of ftabitems--->
 
       <div class="ftabitem">
-        <label>label</label>
+        <label>Phone Number</label>
         <br>
            <input type="tel" pattern="[6789][0-9]{10}"  placeholder="Phone" oninput="this.className = ''" name="phone_number" required="required" class="form-control">
       </div>
       <!----end of ftabitems--->
 
       <div class="ftabitem">
-        <label>label</label>
+        <label>Email</label>
         <br>
            <input type="text" placeholder="Email" oninput="this.className = ''" name="email" required="required" class="form-control">
       </div>
       <!----end of ftabitems--->
        <div class="ftabitem">
-        <label>label</label>
+        <label>Photo</label>
         <br>
            <input type="file" placeholder="photo" oninput="this.className = ''" name="image" required="required" class="form-control">
       </div>
@@ -55,55 +55,55 @@
      <div class="tab ">
     <div class="flextabh">
     <div class="ftabitem">
-      <label>label</label>
+      <label>Photo</label>
       <br>
          <input type="file" placeholder="Photo" oninput="this.className = ''" name="image_1" required="required" class="form-control">
     </div>
     <!----end of ftabitems--->
     <div class="ftabitem">
-      <label>label</label>
+      <label>Photo</label>
       <br>
          <input type="file" placeholder="Photo" oninput="this.className = ''" name="image_2" required="required" class="form-control">
     </div>
     <!----end of ftabitems--->
     <div class="ftabitem">
-      <label>label</label>
+      <label>Photo</label>
       <br>
          <input type="file" placeholder="Photo" oninput="this.className = ''" name="image_3" required="required" class="form-control">
     </div>
     <!----end of ftabitems--->
 <div class="ftabitem">
-        <label>label</label>
+        <label>Name</label>
         <br>
            <input type="text" placeholder="Name" oninput="this.className = ''" name="stadium_name" required="required" class="form-control">
       </div>
       <!----end of ftabitems--->
       <div class="ftabitem">
-        <label>label</label>
+        <label>Door Number</label>
         <br>
            <input type="text" placeholder="door-number" oninput="this.className = ''" name="door_number"required="required" class="form-control">
       </div>
       <!----end of ftabitems--->
       <div class="ftabitem">
-        <label>label</label>
+        <label>Area</label>
         <br>
            <input type="text" placeholder="Area" oninput="this.className = ''" name="area"required="required" class="form-control">
       </div>
       <!----end of ftabitems--->
        <div class="ftabitem">
-        <label>label</label>
+        <label>Land Mark</label>
         <br>
-           <input type="text" placeholder="landmark" oninput="this.className = ''" name="landmark" required="required" class="form-control">
+           <input type="text" placeholder="Landmark" oninput="this.className = ''" name="landmark" required="required" class="form-control">
       </div>
       <!----end of ftabitems--->
       <div class="ftabitem">
-        <label>label</label>
+        <label>City</label>
         <br>
            <input type="text" placeholder="City" oninput="this.className = ''" name="city" required="required" class="form-control">
       </div>
       <!----end of ftabitems--->
       <div class="ftabitem">
-        <label>label</label>
+        <label>Pincode</label>
         <br>
            <input type="number" placeholder="Pincode" oninput="this.className = ''" name="pincode" required="required" class="form-control">
       </div>
@@ -128,13 +128,13 @@
         </div>
       <!----end of ftabitems--->
        <div class="ftabitem">
-        <label>label</label>
+        <label>Pay Per Hour (Rs.)</label>
         <br>
            <input type="text" placeholder="Pay Per Hour" oninput="this.className = ''" name="pay_per_hour" required="required" class="form-control">
       </div>
       <!----end of ftabitems--->
      <div class="ftabitem">
-        <label>label</label>
+        <label>Pay Per Day (Rs.)</label>
         <br>
            <input type="text" placeholder="Pay Per Day" oninput="this.className = ''" name="pay_per_day" required="required" class="form-control">
       </div>
