--- a/app/tournament_registration.html
+++ b/app/tournament_registration.html
@@ -13,13 +13,14 @@
     <title>Tournament Registration</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-<section id="form">
+   <section id="form">
 	<div class="container frbg">
 		<form id="regForm" action="/action_page.php">
-  <h2>Registration:</h2>
+  <h2>Registration</h2>
   <!-- One "tab" for each step in the form: -->
+ 
  <div class="tab ">
+  <h3>User</h3>
     <div class="flextabh">
       <div class="ftabitem">
         <label>Name</label>
@@ -53,6 +54,7 @@
 <!-----------flex ends---->
  
      <div class="tab ">
+      <h3>Stadium:</h3>
     <div class="flextabh">
     <div class="ftabitem">
       <label>Photo</label>
