--- a/app/treg.html
+++ b/app/treg.html
@@ -15,7 +15,7 @@
   <body>
    <section id="form">
 	<div class="container frbg">
-		<form id="regForm" action="/action_page.php" method="POST">
+		<form id="regForm" action="/action_page.php">
   <h2>Registration</h2>
   <!-- One "tab" for each step in the form: -->
  
@@ -53,8 +53,7 @@
 </div>
 <!-----------flex ends---->
  
-     <div class="tab ">
-      <h3>Stadium:</h3>
+          <h3>Stadium:</h3>
     <div class="flextabh">
     <div class="ftabitem">
       <label>Photo</label>
@@ -167,13 +166,7 @@
       <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
     </div>
   </div>
-  <!-- Circles which indicates the steps of the form: -->
-  <div style="text-align:center;margin-top:40px;">
-    <span class="step"></span>
-    <span class="step"></span>
-    <span class="step"></span>
-     </div>
-</form>
+  </form>
 
 	</div>
 </section>
