--- a/app/tournament_registration.html
+++ b/app/tournament_registration.html
@@ -15,7 +15,7 @@
   <body>
    <section id="form">
 	<div class="container frbg">
-		<form id="regForm" action="/action_page.php" method="POST">
+		<form id="regForm" action="tournament_registration.php" method="POST">
   <h2>Registration</h2>
   <!-- One "tab" for each step in the form: -->
  
