--- a/app/sign_in.html
+++ b/app/sign_in.html
@@ -1,187 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>Sign in form</title>
-  </head>
-  <body>
-   <section id="form">
-      <div class="container frbg">
-		    <form id="regForm" action="tournament_registration.php" method="POST">
-          <h2>Registration</h2>
-  <!-- One "tab" for each step in the form: -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
  
-          <div class="tab ">
-          <h3>Tournament</h3>
-            <div class="flextabh">
-              <div class="ftabitem">
-                <label for="image">Photo</label>
-                <br>
-                <input type="file" placeholder="Photo" id="image" name="image" required="required" class="form-control">
-              </div>
-              <!---End of ftabitems---->
-              <div class="ftabitem">
-                <label for="name">Name</label>
-                <br>
-                <input type="text" placeholder="Name" id="name" name="name" required="required" class="form-control">
-              </div>
-              <!----end of ftabitems--->
-              <div class="ftabitem">
-                <label for="description">Description</label>
-                <textarea id="description" name="description" rows="4" cols="30"></textarea>
-              </div>
-              <!----end of ftabitems--->
-              <div class="ftabitem">
-                <label for="location">Location</label>
-                <br>
-                <input type="text" placeholder="Name" id="location" name="location" required="required" class="form-control">
-              </div>
-              <!----end of ftabitems--->
-
-              <div class="ftabitem">
-                <label for="tournament date">Tournament Date</label>
-                <br>
-                <input type="date" id="tournament" id="tournament_date"name="tournament_date">
-              </div>
-              <!----end of ftabitems--->
-              <div class="ftabitem">
-                <label for="timing_start">Starting time</label>
-                <input type="time" id="timing_start" name="timing_start" required="required" class="form-control">
-              </div>
-              <!----end of ftabitems--->
-              <div class="ftabitem">
-                <label for="timing_end">Ending time</label>
-                <input type="time" id="timing_end" name="timing_end" required="required" class="form-control">
-              </div>
-              <!----end of ftabitems--->
-              
-              <div class="ftabitem">
-               <label for="entry_fee">Entry fee</label>
-                <br>
-                <input type="number" placeholder="Rs."id="entry_fee" name="entry_fee" required="required" class="form-control">
-              </div>
-              <!----end of ftabitems--->
-              <div class="ftabitem">
-                <label for="winning_price">Winning Price</label>
-                <br>
-                <input type="number" placeholder="Rs." id="winning_price" name="winning_price_1" required="required" class="form-control">
-              </div>
-              <!----end of ftabitems--->
-              <div class="ftabitem">
-                <label for="winning_price">Winning Price</label>
-                <br>
-                <input type="number" placeholder="Rs." id="winning_price" name="winning_price_1" required="required" class="form-control">
-              </div>
-              <!----end of ftabitems--->
-              <div class="ftabitem">
-                <label for="winning_price">Winning Price</label>
-                <br>
-                <input type="number" placeholder="Rs." id="winning_price" name="winning_price_1" required="required" class="form-control">
-              </div>
-              <!----end of ftabitems--->
-              
+</head>
+<body>
+  <section id="signform">
+    <div class="container-fluid sfbg">
+       <div class="sform">
+        <h2>LOGIN</h2>
+        <form action="/action_page.php">
+          <div class="formgp">
+            <label for="phone">Phone:</label>
+            <br>
+            <input type="tel" class="form-control" id="phone" placeholder="Phone" name="email">
+           </div>
+           <div class="formgp">
+            <label for="otp">OTP</label>
+            <br>
+            <input type="number" class="form-control" id="otp" placeholder="Enter OTP" name="otp">
+          </div>
+          <button type="login" class="btn btn-success">Login</button>
+         </form>
+      </div>
+      <!--End of sform-->
     </div>
-</div>
-<!-----------flex ends---->
- </form>
-</div>
-</section>
-<!----End of form----->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  </section>
+
+  <!--end of signform-->
+  <!--script-->
+ <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
-<script>
-var currentTab = 0; // Current tab is set to be the first tab (0)
-showTab(currentTab); // Display the current tab
-
-function showTab(n) {
-  // This function will display the specified tab of the form...
-  var x = document.getElementsByClassName("tab");
-  x[n].style.display = "block";
-  //... and fix the Previous/Next buttons:
-  if (n == 0) {
-    document.getElementById("prevBtn").style.display = "none";
-  } else {
-    document.getElementById("prevBtn").style.display = "inline";
-  }
-  if (n == (x.length - 1)) {
-    document.getElementById("nextBtn").innerHTML = "Submit";
-  } else {
-    document.getElementById("nextBtn").innerHTML = "Next";
-  }
-  //... and run a function that will display the correct step indicator:
-  fixStepIndicator(n)
-}
-
-function nextPrev(n) {
-  // This function will figure out which tab to display
-  var x = document.getElementsByClassName("tab");
-  // Exit the function if any field in the current tab is invalid:
-  if (n == 1 && !validateForm()) return false;
-  // Hide the current tab:
-  x[currentTab].style.display = "none";
-  // Increase or decrease the current tab by 1:
-  currentTab = currentTab + n;
-  // if you have reached the end of the form...
-  if (currentTab >= x.length) {
-    // ... the form gets submitted:
-    document.getElementById("regForm").submit();
-    return false;
-  }
-  // Otherwise, display the correct tab:
-  showTab(currentTab);
-}
-
-function validateForm() {
-  // This function deals with validation of the form fields
-  var x, y, i, valid = true;
-  x = document.getElementsByClassName("tab");
-  y = x[currentTab].getElementsByTagName("input");
-  // A loop that checks every input field in the current tab:
-  for (i = 0; i < y.length; i++) {
-    // If a field is empty...
-    if (y[i].value == "") {
-      // add an "invalid" class to the field:
-      y[i].className += " invalid";
-      // and set the current valid status to false
-      valid = false;
-    }
-  }
-  // If the valid status is true, mark the step as finished and valid:
-  if (valid) {
-    document.getElementsByClassName("step")[currentTab].className += " finish";
-  }
-  return valid; // return the valid status
-}
-
-function fixStepIndicator(n) {
-  // This function removes the "active" class of all steps...
-  var i, x = document.getElementsByClassName("step");
-  for (i = 0; i < x.length; i++) {
-    x[i].className = x[i].className.replace(" active", "");
-  }
-  //... and adds the "active" class on the current step:
-  x[n].className += " active";
-}
-</script>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    -->
-  </body>
+</body>
 </html>
